--- a/style.scss
+++ b/style.scss
@@ -122,6 +122,9 @@ header{
         text-align: center;
         width: 98%;
     }
+    .add-task:hover, .add-column:hover{
+        background:  rgba(0, 0, 0, .1);
+    }
 
     div{ 
         padding: .2%;
@@ -130,10 +133,6 @@ header{
         align-items: center;
         border-radius: 15px;
         cursor: pointer;
-
-        &:hover{
-            background:  rgba(0, 0, 0, .1);
-        }
 
         span:nth-child(1){
             margin-left: 20px;
@@ -157,6 +156,18 @@ header{
             transition-delay: 1.8s;
         }
     }
+
+    .infos{
+        display: flex;
+        justify-content: space-between;
+        button{
+            background-color: transparent;
+            border-radius: 5px;
+            border: 1px solid black;
+            padding: 0 1em;
+            cursor: pointer;
+        }
+    }
     
 }
 
@@ -169,8 +180,7 @@ section{
     @include style-div($electric-blue, 2);
     @include style-div($maize-crayola, 3);
     @include style-div($misty-rose, 4);
-    @include style-div($black-coral, 5);
-   
+    @include style-div($black-coral, 5); 
 
     .task-column{
         background-size: contain;
@@ -259,12 +269,35 @@ section{
                 }
                 @include state-infos(red);           
             }
+
             .description.ongoing{
                 @include state-infos(green);           
             }
+
             .description.upcoming{
                 @include state-infos(red);           
             }
+
+            .description.show-left-icon{
+                .left{ visibility: visible;}
+                .right{ visibility: hidden;}
+            }
+
+            .description.show-right-icon{
+                .left{ visibility: hidden;}
+                .right{ visibility: visible;}
+            }
+
+            .description.show-right-and-left-icon{
+                .left{ visibility: visible;}
+                .right{ visibility: visible;}
+            }
+
+            .description.do-not-show-right-and-left-icon{
+                .left{ visibility: hidden;}
+                .right{ visibility: hidden;}
+            }
+
         }
 
         .footer{
@@ -352,6 +385,30 @@ section{
                 resize: none;
             }
         }
+    }
+}
+
+.trash{
+    display: none;
+    height: 800px;
+    top: 13%;
+    width: 320px;
+    background-color: #131313;
+    border: 1px solid;
+    position: absolute;
+    z-index: 5;
+    color: white;
+    h2{
+        text-align: center;
+        height: 8%;
+        border-bottom: 1px solid;
+    }
+    .body{
+        height: 92%;
+        overflow-y: auto;
+        &::-webkit-scrollbar{ width: 10px; }
+        &::-webkit-scrollbar-track{ background-color: rgba(109, 103, 103, 0.3); border-radius: 50px; }
+        &::-webkit-scrollbar-thumb{ background: gray; border-radius: 50px; }
     }
 }
 
